feat(D09): add durable redrive operation state